--- a/themes/forty/layouts/partials/contact.html
+++ b/themes/forty/layouts/partials/contact.html
@@ -1,7 +1,7 @@
 {{ "<!-- Contact -->" | safeHTML}}
     <section id="contact">
         <div class="inner">
-            <section>
+           <!-- <section>
                 <form method="post" action="https://formspree.io/{{ .Site.Params.Contact.formEmail }}">
                     <div class="field half first">
                         <label for="name">Name</label>
@@ -20,7 +20,7 @@
                         <li><input type="reset" value="{{ .Site.Params.Contact.buttonClear }}" /></li>
                     </ul>
                 </form>
-            </section>
+            </section> -->
             <section class="split">
                 <section>
                     <div class="contact-method">
