--- a/themes/forty/layouts/partials/contact.html
+++ b/themes/forty/layouts/partials/contact.html
@@ -20,8 +20,8 @@
                         <li><input type="reset" value="{{ .Site.Params.Contact.buttonClear }}" /></li>
                     </ul>
                 </form>
-            </section> -->
-            <section class="split">
+            </section> 
+            <section class="split">-->
                 <section>
                     <div class="contact-method">
                         <span class="icon alt fa-envelope"></span>
